RQST: remove text-monospace

--- a/site/templates/twig/code-tables/map/bum/list.twig
+++ b/site/templates/twig/code-tables/map/bum/list.twig
@@ -30,13 +30,13 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-2 text-monospace">
+			<div class="col-sm-2 ">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-4 text-monospace">
+			<div class="col-sm-4 ">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-4 text-monospace">
+			<div class="col-sm-4 ">
 				<a href="mailto:{{ code.email }}" class="link">{{ code.email }}</a>
 			</div>
 			<div class="col-sm-2 text-center">
