--- a/site/templates/twig/code-tables/mar/crcd/form/custid.twig
+++ b/site/templates/twig/code-tables/mar/crcd/form/custid.twig
@@ -6,7 +6,7 @@
 				'size': 'sm',
 				'input': {
 					'name': 'custid',
-					'addclasses': ['text-monospace'],
+					'addclasses': [''],
 					'attributes': {
 						'placeholder': '',
 						'aria-label':  'Customer ID',
