--- a/site/templates/twig/code-tables/mar/csv/form/surcharge-percent.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/surcharge-percent.twig
@@ -30,7 +30,7 @@
 						'name': 'surchargepercent',
 						'size': 'sm',
 						'type': 'number',
-						'addclasses': ['text-right', 'text-monospace'],
+						'addclasses': ['text-right', ''],
 						'attributes': {
 							'max': manager.fieldAttribute('surchargepercent', 'max'),
 							'default': manager.fieldAttribute('surchargepercent', 'default'),
