--- a/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
+++ b/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
@@ -10,7 +10,7 @@
 						'size': 'sm',
 						'input': {
 							'name': name,
-							'addclasses': ['taxcode', 'text-monospace'],
+							'addclasses': ['taxcode', ''],
 							'attributes': {
 								'placeholder': '',
 								'aria-label':  'Tax Code',
