--- a/site/templates/twig/code-tables/mgl/dtm/list-print.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/list-print.twig
@@ -37,7 +37,7 @@
 			{% set glAcct = code.getGlAccount(code.getAccountNbr(i)) %}
 			<tr>
 				<td>
-					<span class="text-monospace">{{ loop.first ? code.code|replace({' ': '&nbsp;'})|raw : '' }}</span>
+					<span class="">{{ loop.first ? code.code|replace({' ': '&nbsp;'})|raw : '' }}</span>
 				</td>
 				<td>{{ glAcct.code }}</td>
 				<td>{{ glAcct.description }}</td>
