--- a/site/templates/twig/code-tables/mgl/ttm/list-print.twig
+++ b/site/templates/twig/code-tables/mgl/ttm/list-print.twig
@@ -33,7 +33,7 @@
 	{% block code_row %}
 		<tr>
 			<td>
-				<span class="text-monospace">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
+				<span class="">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
 			</td>
 			<td>
 				{% if code.text1 != '' %}
