--- a/site/templates/twig/code-tables/min/tarm/list-print.twig
+++ b/site/templates/twig/code-tables/min/tarm/list-print.twig
@@ -34,7 +34,7 @@
 {% for code in codes %}
 	{% block code_columns %}
 		<td>
-			<span class="text-monospace">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
+			<span class="">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
 		</td>
 		<td>{{ code.number }}</td>
 		<td>{{ code.description }}</td>
