--- a/site/templates/twig/code-tables/mpm/rcm/list.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/list.twig
@@ -37,7 +37,7 @@
 				{{ code.description }}
 			</div>
 			<div class="col-sm-4">
-				<span class="text-monospace pr-3">{{ code.workcenterid|strpad(manager.getDcm().fieldAttribute('code', 'maxlength')|raw) }}</span>
+				<span class=" pr-3">{{ code.workcenterid|strpad(manager.getDcm().fieldAttribute('code', 'maxlength')|raw) }}</span>
 				{{ code.workcenter.description }}
 			</div>
 			<div class="col-sm-3 text-center">
