--- a/site/templates/twig/code-tables/msa/sysop/form.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form.twig
@@ -18,7 +18,7 @@
 						'input': {
 							'name': 'description',
 							'size': 'sm',
-							'addclasses': ['text-monospace'],
+							'addclasses': [''],
 							'value': code.description,
 							'attributes': {
 								'maxlength': sysop.fieldAttribute('description', 'maxlength'),
@@ -44,7 +44,7 @@
 									'value': code.notecode,
 									'lowercase': true,
 									'size': 'sm',
-									'addclasses': ['text-monospace'],
+									'addclasses': [''],
 									'attributes': {
 										'maxlength': sysop.fieldAttribute('notecode', 'maxlength'),
 										'data-notecode': code.notecode
@@ -66,7 +66,7 @@
 									'attributes': {
 										'max': sysop.fieldAttribute('sequence', 'max'),
 									},
-									'addclasses': ['text-right', 'text-monospace']
+									'addclasses': ['text-right', '']
 								}
 							}
 						%}
