--- a/site/templates/twig/code-tables/msa/sysop/form/key.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/key.twig
@@ -26,7 +26,7 @@
 					'name': 'code',
 					'value': code.code,
 					'size': 'sm',
-					'addclasses': ['text-monospace'],
+					'addclasses': [''],
 					'attributes': {
 						'maxlength': sysop.fieldAttribute('code', 'maxlength'),
 						'readonly': code.id != '',
