--- a/site/templates/twig/code-tables/msa/sysop/form/web.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/web.twig
@@ -44,7 +44,7 @@
 						'name': 'docfolder',
 						'value': code.docfolder,
 						'size': 'sm',
-						'addclasses': ['text-monospace'],
+						'addclasses': [''],
 						'attributes': {
 							'readonly': code.filename() == false
 						}
