--- a/site/templates/twig/code-tables/map/vtm/form.twig
+++ b/site/templates/twig/code-tables/map/vtm/form.twig
@@ -4,12 +4,12 @@
 
 	<div class="form-group">
 		<label for="code">Code</label>
-		<input type="text" name="code" class="form-control form-control-sm text-monospace" maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
+		<input type="text" name="code" class="form-control form-control-sm " maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
 	</div>
 
 	<div class="form-group">
 		<label for="description">Description</label>
-		<input type="text" name="description" class="form-control form-control-sm text-monospace" maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
+		<input type="text" name="description" class="form-control form-control-sm " maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
 	<div class="row mb-3">
