--- a/site/templates/twig/code-tables/mar/cocom/list-print.twig
+++ b/site/templates/twig/code-tables/mar/cocom/list-print.twig
@@ -35,7 +35,7 @@
 {% for code in codes %}
 	{% block code_columns %}
 		<td>
-			<span class="text-monospace">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
+			<span class="">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
 		</td>
 		<td>{{ code.iso2 }}</td>
 		<td>{{ code.numeric }}</td>
