--- a/site/templates/twig/code-tables/mar/cocom/list.twig
+++ b/site/templates/twig/code-tables/mar/cocom/list.twig
@@ -28,28 +28,28 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-1 text-monospace">
+			<div class="col-sm-1 ">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-1 text-monospace">
+			<div class="col-sm-1 ">
 				{{ code.iso2 }}
 			</div>
-			<div class="col-sm-1 text-monospace">
+			<div class="col-sm-1 ">
 				{{ code.numeric }}
 			</div>
-			<div class="col-sm-1 text-monospace">
+			<div class="col-sm-1 ">
 				{{ code.custom }}
 			</div>
-			<div class="col-sm-3 text-monospace">
+			<div class="col-sm-3 ">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-2 text-monospace text-right">
+			<div class="col-sm-2  text-right">
 				{{ code.exchange_rate|number_format(manager.fieldAttribute('exchange_rate', 'precision')) }}
 			</div>
-			<div class="col-sm-1 text-monospace text-right">
+			<div class="col-sm-1  text-right">
 				{{ code.country_date|convertdate(manager.fieldAttribute('country_date', 'displayformat')) }}
 			</div>
-			{% if input.get.offsetExists('print') == false %}
+			<div class="col-sm-2 text-center">
 				{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
 					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
@@ -59,7 +59,7 @@
 						<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
 					</span>
 				{% endif %}
-			{% endif %}
+			</div>
 		</div>
 	{% endblock %}
 {% endfor %}
