--- a/site/templates/twig/code-tables/mar/csv/form.twig
+++ b/site/templates/twig/code-tables/mar/csv/form.twig
@@ -19,7 +19,7 @@
 						'input': {
 							'name': 'code',
 							'size': 'sm',
-							'addclasses': ['text-monospace'],
+							'addclasses': [''],
 							'attributes': {
 								'maxlength': manager.fieldAttribute('code', 'maxlength')
 							}
@@ -39,7 +39,7 @@
 					'input': {
 						'name': 'description',
 						'size': 'sm',
-						'addclasses': ['text-monospace'],
+						'addclasses': [''],
 						'attributes': {
 							'maxlength': manager.fieldAttribute('description', 'maxlength')
 						}
