--- a/site/templates/twig/code-tables/mar/ctm/edit/form/gl-account.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/form/gl-account.twig
@@ -11,7 +11,7 @@
 						'input': {
 							'name': name,
 							'value': value,
-							'addclasses': ['gl-account', 'text-monospace'],
+							'addclasses': ['gl-account', ''],
 							'attributes': {
 								'placeholder': '',
 								'aria-label':  'General Ledger Account',
