--- a/site/templates/twig/code-tables/mar/tm/list-print.twig
+++ b/site/templates/twig/code-tables/mar/tm/list-print.twig
@@ -36,7 +36,7 @@
 	{% block code_row %}
 		<tr>
 			<td>
-				<span class="text-monospace">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
+				<span class="">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
 			</td>
 			<td>{{ code.description }}</td>
 			<td></td>
