--- a/site/templates/twig/code-tables/min/iwhm/list-print.twig
+++ b/site/templates/twig/code-tables/min/iwhm/list-print.twig
@@ -38,7 +38,7 @@
 	{% block code_row %}
 		<tr>
 			<td>
-				<span class="text-monospace">{{ code.id|replace({' ': '&nbsp;'})|raw }}</span>
+				<span class="">{{ code.id|replace({' ': '&nbsp;'})|raw }}</span>
 			</td>
 			<td>{{ code.name }}</td>
 			<td>{{ code.address }}</td>
