--- a/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/field-type.twig
@@ -34,7 +34,7 @@
 							'max': sysop.fieldAttribute('beforedecimal', 'max'),
 							'readonly': code.isNumeric() == false
 						},
-						'addclasses': ['text-right', 'text-monospace']
+						'addclasses': ['text-right', '']
 					}
 				}
 			%}
@@ -53,7 +53,7 @@
 							'max': sysop.fieldAttribute('afterdecimal', 'max'),
 							'readonly': code.isNumeric() == false
 						},
-						'addclasses': ['text-right', 'text-monospace']
+						'addclasses': ['text-right', '']
 					}
 				}
 			%}
