--- a/site/templates/twig/code-tables/mso/mfcm/list.twig
+++ b/site/templates/twig/code-tables/mso/mfcm/list.twig
@@ -26,13 +26,13 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-2 text-monospace">
+			<div class="col-sm-2 ">
 				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-4 text-monospace">
+			<div class="col-sm-4 ">
 				{{ code.description }}
 			</div>
-			<div class="col-sm-3 text-monospace">
+			<div class="col-sm-3 ">
 				{{ code.class }}
 			</div>
 			<div class="col-sm-3 text-center">
