FIX: skip focus if code json not found

--- a/site/templates/twig/code-tables/js/events/input-code-change.js.twig
+++ b/site/templates/twig/code-tables/js/events/input-code-change.js.twig
@@ -45,7 +45,11 @@ $("body").on("change", "input[name=code]", function(e) {
 			});
 		}  else {
 			formCode.form.attr('data-serialized', '');
-			formCode.inputs.code.focus();
+
+			if (code == '') {
+				formCode.inputs.code.focus();
+				return true;
+			}
 		}
 	});
 });
