--- a/site/templates/twig/code-tables/mar/csv/form/surcharge-percent.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/surcharge-percent.twig
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-sm-3 mb-2">
-		<label for="addsurcharge">Can Add Surchage</label>
+		<label for="addsurcharge">Can Add Surcharge</label>
 	</div>
 	<div class="col-sm-8 mb-2">
 		<div class="col-sm-2 px-0">
