--- a/site/templates/twig/code-tables/mar/ctm/edit/qnotes/form.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/qnotes/form.twig
@@ -4,7 +4,6 @@
 	<input type="hidden" name="type" id="type" value="">
 	<input type="hidden" name="action" value="update-notes">
 
-
 	<div class="form-group">
 		{% include 'msa/noce/ajax/button.twig' with {'input': '#note'} %}
 	</div>
@@ -13,12 +12,12 @@
 	</div>
 	<div class="d-flex justify-content-between align-items-center">
 		{% if manager.recordlocker.userHasLocked(code.code) or code.code == '' %}
-			<button type="submit" name="action" value="update-notes" class="btn btn-success">
+			<button type="submit" name="action" value="update-notes" class="btn btn-success save">
 				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 			</button>
-			<button type="submit" name="action" value="delete-notes" class="btn btn-danger">
+			<a href="{{ page.ctmNotesDeleteUrl(code.code) }}" class="btn btn-danger delete_button">
 				<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-			</button>
+			</a>
 		{% endif %}
 		<button type="button" class="btn btn-warning pull-right" data-dismiss="modal">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
