--- a/site/templates/twig/code-tables/mar/ctm/edit/qnotes/qnotes.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/qnotes/qnotes.twig
@@ -1,3 +1,6 @@
+
+
+
 <ul class="nav nav-tabs" id="qnotes-tabs" role="tablist">
 	{% for qnotes in ctm.qnotes.getQnotes() %}
 		<li class="nav-item" role="presentation">
@@ -7,8 +10,11 @@
 		</li>
 	{% endfor %}
 </ul>
+
 <div class="tab-content" id="qnotes-notes">
 	{% for qnotes in ctm.qnotes.getQnotes() %}
+		{% set activeClass = '' %}
+		{% set activeClass = loop.first ? 'active' : '' %}
 		<div class="tab-pane fade show {{ loop.first ? 'active' : '' }}" id="{{ constant('TYPE', qnotes) }}" role="tabpanel" aria-labelledby="{{ constant('TYPE', qnotes) }}-tab">
 			<div class="mb-3">
 				{% set note_lines = qnotes.getNotesArray(code.code) %}
