FIX: updhift tax codes

--- a/site/templates/twig/code-tables/mar/tm/.js.twig
+++ b/site/templates/twig/code-tables/mar/tm/.js.twig
@@ -30,7 +30,7 @@ $(function() {
 
 		var previousTaxCode = formCode.inputs.taxcode(index - 1);
 		
-		if (previousTaxCode.length && previousTaxCode.val() == '') {
+		if (previousTaxCode.length && (previousTaxCode.val() == '' || previousTaxCode.val() == input.val())) {
 			formCode.shiftTaxCodesUp(index - 1);
 			return true;
 		}
