--- a/site/templates/twig/code-tables/mar/tm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mar/tm/js/classes/Form.js.twig
@@ -27,13 +27,6 @@ class CodeForm {
 			for (var i = 1; i <= 9; i++) {
 				this.inputs.taxcode(i).val(json['taxcode' + i]);
 				this.inputs.taxcode(i).change();
-
-				if (i > 1) {
-					// if (json['taxcode' + i] == '' && json['taxcode' + (i - 1)] == '') {
-					// 	this.inputs.taxcode(i).parent('.input-group').find('button[data-lookupurl]').attr('disabled', 'disabled');
-					// 	this.inputs.taxcode(i).attr('readonly', 'readonly');
-					// }
-				}
 			}
 
 			var validator = this.inputs.form.validate();
@@ -45,36 +38,49 @@ class CodeForm {
 		this.inputs.code.removeAttr('readonly');
 		this.inputs.description.val('');
 
-		for (var i = 1; i < 11; i++) {
+		for (var i = 1; i <= 9; i++) {
 			this.inputs.taxcode(i).val('');
 			this.inputs.taxcode(i).change();
 		}
 	}
 
 	shiftTaxCodesUp(index = 1) {
-		if (index == 1) {
-			return true;
+
+		var taxcodes = [];
+		// Get all the Tax Codes at their current Index
+
+		var currentInput = this.inputs.taxcode(index);
+
+		for (var i = 1; i <= 9; i++) {
+			var input = this.inputs.taxcode(i);
+
+			if (input.length && input.val() && taxcodes.includes(input.val()) === false) {
+				taxcodes.push(input.val());
+			}
 		}
 
-		for (var i = index; i <= 9; i++) {
-			var input = this.form.find("input.taxcode[data-index="+i+"]");
-			var nextInput = this.form.find("input.taxcode[data-index="+(i + 1)+"]");
-			if (input.length == 0 || nextInput.length == 0) {
-				continue;
-			}
 
-			if (input.val()) {
-				continue;
-			}
-			var taxcode = nextInput.val();
-			nextInput.val('');
-			nextInput.change();
+		for (var i = 0; i <= taxcodes.length; i++) {
+			var input = this.inputs.taxcode(i + 1);
+			var oldValue = input.val();
+			input.val(taxcodes[i]);
 
-			if (taxcode) {
-				input.val(taxcode);
+			if (oldValue != input.val()) {
 				input.change();
-				nextInput.change();
 			}
+		}
+
+		console.log('starting from ' + taxcodes.length);
+		for (var i = taxcodes.length; i <= 9; i++) {
+			var input = this.inputs.taxcode(i + 1);
+			if (input.length == 0) {
+				continue;
+			}
+			console.log('emptying ' + input.attr('name'));
+			console.log(input);
+			console.log(input.val());
+			input.val('');
+
 		}
 	}
 
