FIX: trigger changes after all inputs are blank

--- a/site/templates/twig/code-tables/mar/tm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mar/tm/js/classes/Form.js.twig
@@ -40,7 +40,10 @@ class CodeForm {
 
 		for (var i = 1; i <= 9; i++) {
 			this.inputs.taxcode(i).val('');
-			this.inputs.taxcode(i).change();
+		}
+
+		for (var i = 1; i <= 9; i++) {
+			this.inputs.taxcode(i).change()
 		}
 	}
 
