--- a/site/templates/twig/mar/armain/pty3/customer-accounts/list.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/list.twig
@@ -9,7 +9,7 @@
 			<div class="col-sm-1">State</div>
 			<div class="col-sm-1">Zip</div>
 			<div class="col-sm-3 text-center">
-				{% if page.is_print() == false %}
+				{% if input.get.offsetExists('print') == false %}
 					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-account-modal" data-accountnbr="" data-description="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add <span class="d-none d-sm-inline">Account</span>
 					</button>
@@ -27,14 +27,20 @@
 				<div class="col-sm-1 text-monospace">{{ account.state }}</div>
 				<div class="col-sm-1 text-monospace">{{ account.zip }}</div>
 				<div class="col-sm-3 text-center">
-					{% if page.is_print() == false %}
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-account-modal" data-accountnbr="{{ account.accountnbr }}" data-description="{{ account.description }}" data-json="{{ manager.recordJson(account)|json_encode }}">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</button>
-						&nbsp;
-						<a href="{# page.accountDeleteUrl(account.account) #}" class="btn btn-danger btn-sm delete_button">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
+					{% if input.get.offsetExists('print') == false %}
+						{% if manager.recordlocker.isLocked(key) == false or manager.recordlocker.isLockedByUser(key) %}
+							<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-account-modal" data-accountnbr="{{ account.accountnbr }}" data-description="{{ account.description }}" data-json="{{ manager.recordJson(account)|json_encode }}">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</button>
+							&nbsp;
+							<a href="{# page.accountDeleteUrl(account.custid, account.accountnbr) #}" class="btn btn-danger btn-sm delete_button">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(key) }}
+							</span>
+						{% endif %}
 					{% endif %}
 				</div>
 			</div>
