--- a/site/templates/twig/mar/armain/pty3/customer-accounts/list.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/list.twig
@@ -33,7 +33,7 @@
 								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 							</button>
 							&nbsp;
-							<a href="{# page.accountDeleteUrl(account.custid, account.accountnbr) #}" class="btn btn-danger btn-sm delete_button">
+							<a href="{{ page.accountDeleteUrl(account.custid, account.accountnbr) }}" class="btn btn-danger btn-sm delete_button">
 								<i class="fa fa-trash" aria-hidden="true"></i> Delete
 							</a>
 						{% else %}
