--- a/site/templates/twig/mar/armain/pty3/customer-accounts/form.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/form.twig
@@ -125,6 +125,11 @@
 		<button type="submit" class="btn btn-success form_button">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
+		<div>
+			<a href="{{ page.accountDeleteUrl(input.get.string('custid'), 'acct') }}" class="btn btn-danger btn-sm delete_button collapse">
+				<i class="fa fa-trash" aria-hidden="true"></i> Delete
+			</a>
+		</div>
 		<button type="button" class="btn btn-warning" data-dismiss="modal">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</button>
