--- a/site/templates/twig/mar/armain/pty3/customers/list.twig
+++ b/site/templates/twig/mar/armain/pty3/customers/list.twig
@@ -1,23 +1,10 @@
+{% set values = input.get %}
 {% block header %}
 	<div class="row">
 		<div class="col-sm-6 mb-3">
-			{% if page.is_print() %}
-				<button onclick="window.history.back();" class="btn btn-primary d-print-none">
-					<i class="fa fa-undo" aria-hidden="true"></i> Back
-				</button>
-				&nbsp;
-				<button class="btn btn-primary d-print-none" onclick="window.print();return false;">
-					<i class="fa fa-print" aria-hidden="true"></i> Print
-				</button>
-			{% else %}
-				<a href="{{ page.menuUrl() }}" class="btn btn-primary">
-					<i class="fa fa-undo" aria-hidden="true"></i> Back <span class="d-none d-sm-inline">to {{ page.menuTitle() }}</span>
-				</a>
-				&nbsp;
-				<a href="{{ page.get_printURL() }}" class="btn btn-primary">
-					<i class="fa fa-print" aria-hidden="true"></i> View Printable
-				</a>
-			{% endif %}
+			<a href="{{ page.menuUrl() }}" class="btn btn-primary">
+				<i class="fa fa-undo" aria-hidden="true"></i> Back <span class="d-none d-sm-inline">to {{ page.menuTitle() }}</span>
+			</a>
 		</div>
 		<div class="col-sm-6 mb-3">
 			{% block search %}
@@ -33,7 +20,7 @@
 
 						<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit column-filter flex-grow-1 order-1 order-sm-2">
 							<div class="input-group">
-								<div class="input-group-btn search-panel">
+								<div class="input-group-btn search-panel collapse">
 									<div class="dropdown">
 										<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
 											Search By <span class="searchby">{{ values.offsetExists('col') ? values.text('col')|capitalize : 'All' }}</span> <span class="caret"></span>
@@ -46,7 +33,7 @@
 									</div>
 								</div>
 				
-								<input class="form-control form-group inline" type="text" name="q" value="{{ values.text('q') }}">
+								<input class="form-control form-group inline" type="text" name="q" value="{{ values.text('q') }}" placeholder="Search By Cust ID, Name, Address City, State, Zip">
 								<input type="hidden" name="col" value="all">
 								
 								<span class="input-group-btn">
@@ -63,29 +50,76 @@
 	</div>
 {% endblock %}
 
+<div class="d-flex justify-content-between">
+	<div><h4>{{ customers.getNbResults() }} Customers</h4></div>
+	<div></div>
+	<div>
+		{% include 'util/bootstrap/html/button.twig' with {
+			'button': {
+				'colorclass': 'btn-secondary',
+				'text': 'fa fa-search'|icon ~ ' Customers',
+				'attributes': {
+					'title': 'Search Customers',
+					'data-toggle': 'modal',
+					'data-target': '#ajax-modal',
+					'data-lookupurl': page.searchLookupUrl('customers/')
+				}
+			}
+		} %}
+	</div>
+</div>
+
 <div class="table-responsive">
-	<table class="table table-sm">
+	<table class="table table-bordered">
 		<thead>
 			<tr>
-				<th>ID</th>
-				<th>Name</th>
-				<th>City</th>
-				<th>State</th>
-				<th>Zip</th>
 				<th>
-					{% include 'util/bootstrap/html/button.twig' with {
-						'button': {
-							'colorclass': 'btn-secondary',
-							'text': 'fa fa-search'|icon ~ ' Customers',
-							'attributes': {
-								'title': 'Search Customers',
-								'data-toggle': 'modal',
-								'data-target': '#ajax-modal',
-								'data-lookupurl': page.searchLookupUrl('customers/')
-							}
-						}
-					}
-				%}
+					<a href="{{ page.get_sortURL('custid') }}" class="link">
+						ID
+						{% if page.orderby_column == 'custid' %}
+							<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+						{% endif %}
+					</a>
+				</th>
+				<th>
+					<a href="{{ page.get_sortURL('name') }}" class="link">
+						Name
+						{% if page.orderby_column == 'name' %}
+							<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+						{% endif %}
+					</a>
+				</th>
+				<th>
+					<a href="{{ page.get_sortURL('address1') }}" class="link">
+						Address
+						{% if page.orderby_column == 'address1' %}
+							<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+						{% endif %}
+					</a>
+				</th>
+				<th>
+					<a href="{{ page.get_sortURL('city') }}" class="link">
+						City
+						{% if page.orderby_column == 'city' %}
+							<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+						{% endif %}
+					</a>
+				</th>
+				<th>
+					<a href="{{ page.get_sortURL('state') }}" class="link">
+						State
+						{% if page.orderby_column == 'state' %}
+							<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+						{% endif %}
+					</a>
+				</th>
+				<th>
+					<a href="{{ page.get_sortURL('zip') }}" class="link">
+						Zip
+						{% if page.orderby_column == 'zip' %}
+							<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
+						{% endif %}
+					</a>
 				</th>
 			</tr>
 		</thead>
@@ -98,10 +132,10 @@
 						</a>
 					</td>
 					<td>{{ customer.name }}</td>
+					<td>{{ customer.address1 }}</td>
 					<td>{{ customer.city }}</td>
 					<td>{{ customer.state }}</td>
 					<td>{{ customer.zip }}</td>
-					<td></td>
 				</tr>
 			{% endfor %}
 		</tbody>
